# claire-organization-server-demo

./: .env  .env.example  .gitignore  Dockerfile  README.md  generate_api_key.sh  pyproject.toml
src/organization_server_demo/: app.py  settings.py
src/organization_server_demo/modules/base/: authenticated_user_provider.py  exceptions.py  models.py  prefixed_id.py  user_provider.py  utils.py
src/organization_server_demo/modules/claire/models/: bots.py  sessions.py  settings.py
src/organization_server_demo/modules/claire/providers/: bot_provider.py  session_provider.py  settings_provider.py
src/organization_server_demo/modules/claire/routers/: bots.py  sessions.py
src/organization_server_demo/modules/claire/services/: bot_service.py  claire_service.py  session_service.py
src/organization_server_demo/modules/nova/models/: bots.py  sessions.py  settings.py
src/organization_server_demo/modules/nova/providers/: bot_provider.py  session_provider.py  settings_provider.py
src/organization_server_demo/modules/nova/routers/: bots.py  sessions.py
src/organization_server_demo/modules/nova/services/: bot_service.py  nova_service.py  session_service.py
