[build-system]
requires = ["uv_build>=0.7.6,<0.8.0"]
build-backend = "uv_build"

[project]
name = "organization-server-demo"
version = "0.1.0"
description = "A simple Demo for a simple FastAPI organization server used with the NOVA System"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.116.1,<1.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "fastapi-auth0>=0.5.0,<1.0.0",
    "aiohttp>=3.8.5,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "ruff"
]

ci = [
    "pytest>=7.4.2,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "python-semantic-release>=9.0.0,<10.0.0",
    "ruff"
]

build = ["uv_build>=0.7.20,<0.8.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.semantic_release]
version_source = "pyproject"
version_toml = [
    "pyproject.toml:project.version:nf",
]
version_variables = [
    "src/organization_server_demo/__init__.py:__version__:nf",
]
branch = "main"
tag_commit = true
upload_to_repository = false
upload_to_release = false
exclude_commit_patterns = [
    "chore: bump version to {version} [skip ci]",
]
commit_message = "chore: bump version to {version} [skip ci]"
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.alpha]
match = "dev|develop|development"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.remote]
type = "github"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"